Fixed canteen marker not showing title from the beginning

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,26 @@ body {
   font-family: "Quicksand";
 }
 
+.leaflet-popup-tip-container {
+  display: none;
+}
+
+.leaflet-tooltip {
+  position: absolute;
+  padding: none;
+  background-color: none;
+  border: none;
+  border-radius: none;
+  color: none;
+  white-space: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  pointer-events: none;
+  box-shadow: none;
+}
+
 .leaflet-control {
   z-index: 0 !important;
 }
